# lan_fileshare_py

./: README.md  main.py  main.qml  pyproject.toml  rc_resources.py  resources.qrc
.qtcreator/: pyproject.toml.user.252de20
Backend/: backend.py  discovery.py  state.py  tcp_manager.py
Backend/models/: FileListModel.py
ui/: DevicesGrid.qml  FileItem.qml  FileShare.qml  FilesOverlayItem.qml  main.qml
ui/Components/: ActionButton.qml  ConnectionRequest.qml  DevicesGrid.qml  FileItem.qml  FilesOverlayBar.qml
ui/Pages/: FileShare.qml  main.qml
