[project]
name = "PySide QtQuick Project"

[tool.pyside6-project]
files = ["Backend/backend.py", "Backend/discovery.py", "Backend/state.py", "Backend/tcp_manager.py", "main.py", "ui/main.qml", "resources.qrc", "ui/ConnectionRequest.qml", "ui/FileShare.qml", "ui/Icons/Computer4x.png", "ui/Icons/qml/ComputerIcon.qml", "ui/DevicesGrid.qml"]
