[project]
name = "PySide QtQuick Project"

[tool.pyside6-project]
files = [
"assets/icons/Computer4x.png",
"assets/icons/file-icon.png",
"assets/icons/plus-icon.png",
"assets/icons/trash-icon.png",
"backend/backend.py",
"backend/discovery.py",
"backend/models/FileListModel.py",
"backend/state.py",
"backend/tcp_manager.py",
"main.py",
"resources.qrc",
"ui/Components/ActionButton.qml",
"ui/Components/ConnectionRequest.qml",
"ui/Components/DevicesGrid.qml",
"ui/Components/FileItem.qml",
"ui/Components/FilesOverlayBar.qml",
"ui/Components/FilesOverlayItem.qml",
"ui/Pages/FileShare.qml",
"ui/Pages/main.qml",
]
